# sscs-bootstrapper

./: .gitignore  .semgrepignore  .trivyignore  Cargo.toml  ISA.md  LICENSE  README.md  SECURITY.md  security-insights.yml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/chainguard/: sscsb-automation.sts.yaml
.github/workflows/: cflite-pr.yml  ci.yml  codeql.yml  deploy-gate.yml  octo-sts-example.yml  release-attest-sbom.yml  release-attest.yml  release-sign.yml  release.yml  sast-opengrep.yml  sbom.yml  scorecard.yml  secrets-scan.yml  vuln-scan.yml
.sscsb/: best-practices-badge.md  config.toml  osps-baseline.md
.sscsb/hooks/: commit-msg  pre-commit  pre-push
.sscsb/policy/: allowed_signers  packages.toml  signers.toml
.sscsb/rules/: sscsb-default.yaml
Plans/: snappy-forging-boole-agent-af7f128c61ca34cf5.md  snappy-forging-boole.md
docs/: agent-signing.md  ai-provenance.md  example-walkthrough.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  signing.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_deps.rs  parse_signers.rs  parse_trailers.rs
src/: audit.rs  cli.rs  compliance.rs  config.rs  context.rs  controls.rs  deps.rs  exec.rs  harden.rs  hooks.rs  init.rs  lib.rs  main.rs  observability.rs  openssf.rs  platform.rs  provenance.rs  sast.rs  sbom.rs  scan.rs  scorecard.rs  signers.rs  testutil.rs  tools.rs  workflows.rs
templates/: trivyignore
templates/clusterfuzzlite/: Dockerfile  build.sh
templates/compliance/: map.json
templates/configs/: gitleaks.toml  (+7 more)
tests/: integration.rs  library.rs  tool_orchestration.rs
(+18 files in other folders)
