[package]
name = "sscsb"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "SSCS Bootstrapper — opinionated, modular software supply chain security for solo developers and small teams in AI-heavy workflows"
repository = "https://github.com/p4gs/sscs-bootstrapper"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
toml = "0.8"
toml_edit = "0.22"
ureq = { version = "2.12", features = ["json"] }
yaml-rust2 = "0.10"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"

[profile.release]
strip = true
